# LLM-Pruner

./: hf_prune.py  pyproject.toml
